--- a/templates/home.html
+++ b/templates/home.html
@@ -45,56 +45,56 @@
     <div id="container">
         <div style="display: table-cell; text-align:center;" id="box">
 
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}" alt="Placeholder"
-                     style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none;font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/history.png')}}" alt="Placeholder"
+                     style="width:128px;height:128px;padding-top:10%;"/>
             <br>
-            Placeholder
+            <b>Update History</b>
             </a>
 
         </div>
 
         <div style="display: table-cell; text-align:center;" id="box">
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}"
-                 alt="Placeholder" style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none;font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/code.png')}}"
+                 alt="Placeholder" style="width:128px;height:128px;padding-top:12%;"/>
             <br>
-            Placeholder
+            <b>Game Codes</b>
             </a>
         </div>
 
         <div style="display: table-cell; text-align:center;" id="box">
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}"
-                 alt="Placeholder" style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none;font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/element.png')}}"
+                 alt="Placeholder" style="width:60%;height:60%;padding-top:11%;"/>
             <br>
-            Placeholder
+            <b>Elements</b>
             </a>
         </div>
 
 
         <div style="display: table-cell; text-align:center;" id="box">
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}"
-                 alt="Placeholder" style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none;font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/calculator.png')}}"
+                 alt="Placeholder" style="width:128px;height:128px;padding-top:12%;"/>
             <br>
-            Placeholder
+            <b>Calculator</b>
             </a>
         </div>
         <div style="display: table-cell; text-align:center;" id="box">
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}"
-                 alt="Placeholder" style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none;font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/wish.png')}}"
+                 alt="Placeholder" style="width:160px;height:160px;padding-top:4%;"/>
             <br>
-            Placeholder
+            <b>Wish Simulator</b>
             </a>
         </div>
         <div style="display: table-cell; text-align:center;" id="box">
-            <a style="text-decoration:none; color:black" href="">
-                <img src="{{url_for('static', filename='icon/primogem.webp')}}"
-                 alt="Placeholder" style="width:64px;height:64px;padding-top:15%;"/>
+            <a style="text-decoration:none; font-size:30px; color:white" href="">
+                <img src="{{url_for('static', filename='icon/tierlist.png')}}"
+                 alt="Placeholder" style="width:128px;height:128px;padding-top:10%;"/>
             <br>
-            Placeholder
+            <b>Tierlist</b>
             </a>
         </div>
 
