--- a/templates/indiv/Albedo.html
+++ b/templates/indiv/Albedo.html
@@ -105,6 +105,45 @@ Plunges from mid-air to strike the ground below, damaging opponents along the pa
     </div>
 </div>
 
+<br>
+<br><hr id="hrgeo"><br>
+<img src="{{url_for('static', filename='img/Albedo/skill.webp')}}" style="width:64px;height:64px; float: left; margin-right: 10px; margin-bottom: 20px;"  />
+
+<div style="position: relative; top: 10px; width: 40%;">
+
+<h3 id="geo" style="margin: 0px; position: relative; text-align: center;">
+    Abiogenesis: Solar Isotoma
+</h3>
+    <h5 style="color:white; margin: 0px; text-align: center; position: relative;">
+        Elemental Skill
+    </h5>
+
+</div>
+<div style="color:white;">
+    <br>
+    <br>
+    <br>
+Albedo creates a Solar Isotoma using alchemy, which deals AoE Geo DMG on appearance.
+<br>
+    <br>
+<b>Solar Isotoma</b>
+    <br>
+has the following properties:
+    <br>
+<ul>When opponents within the Solar Isotoma field take DMG, the Solar Isotoma will generate Transient Blossoms which deal AoE Geo DMG. DMG dealt scales off Albedo's DEF.</ul>
+<ul>Transient Blossoms can only be generated once every 2s.</ul>
+<ul>When a character is located at the locus of the Solar Isotoma, the Solar Isotoma will accumulate Geo power to form a crystallized platform that lifts the character up to a certain height. Only one crystallized platform can exist at a time.</ul>
+    <ul>Solar Isotoma is considered a Geo construct. Only one Solar Isotoma created by Albedo himself can exist at a time.</ul>
+<br>
+    Hold to designate the location of the skill.
+
+    <br>
+    <div class="dropdown">
+  <button onclick="myFunction(2)" class="dropbtn">Scaling▼</button>
+  <div id="myDropdown2" class="dropdown-content">
+  <table class="wikitable" border="10" bordercolor="#4f5a6b" style="text-align:center;width:100%; background: #202226;"><tbody><tr><th></th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th><th>11</th></tr><tr><th>1-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>2-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>3-Hit DMG (%)</th><td>47.45</td><td>51.32</td><td>55.18</td><td>60.7</td><td>64.56</td><td>68.97</td><td>75.04</td><td>81.11</td><td>87.18</td><td>93.81</td><td>101.39</td></tr><tr><th>4-Hit DMG (%)</th><td>49.75</td><td>53.8</td><td>57.85</td><td>63.63</td><td>67.68</td><td>72.31</td><td>78.68</td><td>85.04</td><td>91.4</td><td>98.34</td><td>106.3</td></tr><tr><th>5-Hit DMG (%)</th><td>62.07</td><td>67.13</td><td>72.18</td><td>79.4</td><td>84.45</td><td>90.22</td><td>98.16</td><td>106.1</td><td>114.04</td><td>122.7</td><td>132.63</td></tr></tbody></table>
+  </div>
+</div>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
