--- a/templates/arti.html
+++ b/templates/arti.html
@@ -41,5 +41,180 @@
      charaicon.innerHTML = '<img src="{{url_for('static', filename='icon/characters2.png')}}"alt="Characters" style="width:64px;height:64px;"/>';
     }
     </script>
+
+<div id="container">
+
+        <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/adventurer.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+         <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/archaic.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Archaic Petra
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/berserker.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Berserker
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/blizzard.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Blizzard Strayer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/bloodstained.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Bloodstained Chivalry
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/brave.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Brave Heart
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/crimson.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Crimson Witch of Flames
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/defenders.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Defender's Will
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Echoes of an Offering
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Emblem of Severed Fate
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Gambler
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Gladiator's Finale
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+
 </body>
 </html>
