--- a/templates/char.html
+++ b/templates/char.html
@@ -473,6 +473,436 @@
      const charcon2 = document.getElementById("80");
      charcon2.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Geo/icon1.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Geo';
     }
+    </script><div id="container">
+
+        <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='img/Albedo/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Albedo
+        </a>
+        </div>
+
+        <div>
+        <a style="text-decoration:none; color:black" href="Aloy" id="charcryo">
+            <img src="{{url_for('static', filename='img/Aloy/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Aloy
+        </a>
+        </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Amber" id="charpyro">
+            <img src="{{url_for('static', filename='img/Amber/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Amber
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Arataki Itto" id="chargeo">
+            <img src="{{url_for('static', filename='img/Arataki Itto/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Arataki Itto
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Barbara" id="charhydro">
+            <img src="{{url_for('static', filename='img/Barbara/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Barbara
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Beidou" id="charelectro">
+            <img src="{{url_for('static', filename='img/Beidou/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Beidou
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Bennett" id="charpyro">
+            <img src="{{url_for('static', filename='img/Bennett/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Bennett
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Chongyun" id="charcryo">
+            <img src="{{url_for('static', filename='img/Chongyun/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Chongyun
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Diluc" id="charpyro">
+            <img src="{{url_for('static', filename='img/Diluc/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Diluc
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Diona" id="charcryo">
+            <img src="{{url_for('static', filename='img/Diona/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Diona
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Eula" id="charcryo">
+            <img src="{{url_for('static', filename='img/Eula/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Eula
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Fischl" id="charelectro">
+            <img src="{{url_for('static', filename='img/Fischl/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Fischl
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Ganyu" id="charcryo">
+            <img src="{{url_for('static', filename='img/Ganyu/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Ganyu
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Gorou" id="chargeo">
+            <img src="{{url_for('static', filename='img/Gorou/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Gorou
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Hu Tao" id="charpyro">
+            <img src="{{url_for('static', filename='img/Hu Tao/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Hu Tao
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Jean" id="charanemo">
+            <img src="{{url_for('static', filename='img/Jean/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Jean
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Kaedehara Kazuha" id="charanemo">
+            <img src="{{url_for('static', filename='img/Kaedehara Kazuha/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Kaedehara Kazuha
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Kaeya" id="charcryo">
+            <img src="{{url_for('static', filename='img/Kaeya/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Kaeya
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Kamisato Ayaka" id="charcryo">
+            <img src="{{url_for('static', filename='img/Kamisato Ayaka/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Kamisato Ayaka
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Kamisato Ayato" id="charhydro">
+            <img src="{{url_for('static', filename='img/Kamisato Ayato/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Kamisato Ayato
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Keqing" id="charelectro">
+            <img src="{{url_for('static', filename='img/Keqing/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Keqing
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Klee" id="charpyro">
+            <img src="{{url_for('static', filename='img/Klee/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Klee
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Kujou Sara" id="charelectro">
+            <img src="{{url_for('static', filename='img/Kujou Sara/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Kujou Sara
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Lisa" id="charelectro">
+            <img src="{{url_for('static', filename='img/Lisa/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Lisa
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Mona" id="charhydro">
+            <img src="{{url_for('static', filename='img/Mona/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Mona
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Ningguang" id="chargeo">
+            <img src="{{url_for('static', filename='img/Ningguang/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Ningguang
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Noelle" id="chargeo">
+            <img src="{{url_for('static', filename='img/Noelle/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Noelle
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Qiqi" id="charcryo">
+            <img src="{{url_for('static', filename='img/Qiqi/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Qiqi
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Raiden Shogun" id="charelectro">
+            <img src="{{url_for('static', filename='img/Raiden Shogun/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Raiden Shogun
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Razor" id="charelectro">
+            <img src="{{url_for('static', filename='img/Razor/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Razor
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Rosaria" id="charcryo">
+            <img src="{{url_for('static', filename='img/Rosaria/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Rosaria
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Sangonomiya Kokomi" id="charhydro">
+            <img src="{{url_for('static', filename='img/Sangonomiya Kokomi/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Sangonomiya Kokomi
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Sayu" id="charanemo">
+            <img src="{{url_for('static', filename='img/Sayu/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Sayu
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Shenhe" id="charcryo">
+            <img src="{{url_for('static', filename='img/Shenhe/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Shenhe
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Sucrose" id="charanemo">
+            <img src="{{url_for('static', filename='img/Sucrose/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Sucrose
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Tartaglia" id="charhydro">
+            <img src="{{url_for('static', filename='img/Tartaglia/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Tartaglia
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Thoma" id="charpyro">
+            <img src="{{url_for('static', filename='img/Thoma/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Thoma
+        </a>
+    </div>
+    <div>
+        <a id="60" style="text-decoration:none; color:black" href="Traveler Anemo" class="charanemo">
+        </a>
+        <a style="text-decoration:none; color:black" href="Traveler Anemo">
+        <br>
+        </a>
+    </div>
+    <div>
+        <a id="70" style="text-decoration:none; color:black" href="Traveler Electro" class="charelectro">
+        </a>
+        <a style="text-decoration:none; color:black" href="Traveler Electro">
+        <br>
+        </a>
+    </div>
+    <div>
+        <a id="80" style="text-decoration:none; color:black" href="Traveler Geo" class="chargeo">
+        </a>
+        <a style="text-decoration:none; color:black" href="Traveler Geo">
+        <br>
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Venti" id="charanemo">
+            <img src="{{url_for('static', filename='img/Venti/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Venti
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Xiangling" id="charpyro">
+            <img src="{{url_for('static', filename='img/Xiangling/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Xiangling
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Xiao" id="charanemo">
+            <img src="{{url_for('static', filename='img/Xiao/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Xiao
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Xinqiu" id="charhydro">
+            <img src="{{url_for('static', filename='img/Xinqiu/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Xinqiu
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Xinyan" id="charpyro">
+            <img src="{{url_for('static', filename='img/Xinyan/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Xinyan
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Yae Miko" id="charelectro">
+            <img src="{{url_for('static', filename='img/Yae Miko/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Yae Miko
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Yanfei" id="charpyro">
+            <img src="{{url_for('static', filename='img/Yanfei/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Yanfei
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Yoimiya" id="charpyro">
+            <img src="{{url_for('static', filename='img/Yoimiya/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Yoimiya
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Yunjin" id="chargeo">
+            <img src="{{url_for('static', filename='img/Yunjin/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Yunjin
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration:none; color:black" href="Zhongli" id="chargeo">
+            <img src="{{url_for('static', filename='img/Zhongli/icon.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Zhongli
+        </a>
+    </div>
+    </div>
+
+    <script>
+    if ({{ sibl }} == 1){
+     const charcon = document.getElementById("60");
+     charcon.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Anemo/icon2.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Anemo';
+    } else {
+     const charcon = document.getElementById("60");
+     charcon.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Anemo/icon1.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Anemo';
+    }
+    </script>
+
+    <script>
+    if ({{ sibl }} == 1){
+     const charcon1 = document.getElementById("70");
+     charcon1.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Electro/icon2.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Electro';
+    } else {
+     const charcon1 = document.getElementById("70");
+     charcon1.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Electro/icon1.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Electro';
+    }
+    </script>
+
+    <script>
+    if ({{ sibl }} == 1){
+     const charcon2 = document.getElementById("80");
+     charcon2.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Geo/icon2.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Geo';
+    } else {
+     const charcon2 = document.getElementById("80");
+     charcon2.innerHTML = '<img src="{{url_for('static', filename='img/Traveler Geo/icon1.webp')}}"alt="Characters" style="width:128px;height:128px;margin:20px;"/> <br> Traveler Geo';
+    }
     </script>
 
 </body>
