--- a/templates/weap.html
+++ b/templates/weap.html
@@ -41,5 +41,179 @@
      charaicon.innerHTML = '<img src="{{url_for('static', filename='icon/characters2.png')}}"alt="Characters" style="width:64px;height:64px;"/>';
     }
     </script>
+
+<div id="container">
+
+        <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/hunter.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Hunter's Bow
+        </a>
+        </div>
+
+         <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/beginner.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Beginner's Protector
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/dull.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Dull Blade
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/waster.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Waster Greatsword
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/apprentice.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Apprentice's Notes
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/ironpoint.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Iron Point
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/seasoned.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Seasoned Hunter's Bow
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/silversword.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Silver Sword
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Emblem of Severed Fate
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Emblem of Severed Fate
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Gambler
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Gladiator's Finale
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
+     <div>
+        <a style="text-decoration:none; color:black" href="Albedo" id="chargeo">
+            <img src="{{url_for('static', filename='icon/primogem.webp')}}"
+                 alt="Characters" style="width:128px;height:128px;margin:20px;"/>
+            <br>
+        Adventurer
+        </a>
+        </div>
+
 </body>
 </html>
