--- a/templates/indiv/Arataki Itto.html
+++ b/templates/indiv/Arataki Itto.html
@@ -2,6 +2,154 @@
 {% block title %}
 Arataki Itto
 {% endblock %}
+{% block background %}
+body {
+background: #918246;
+}
+{% endblock %}
 {% block name %}
 Arataki Itto
+{% endblock %}
+{% block star %}
+<img src="{{url_for('static', filename='icon/star.png')}}" style="width:24px;height:24px;" />
+<img src="{{url_for('static', filename='icon/star.png')}}" style="width:24px;height:24px;" />
+<img src="{{url_for('static', filename='icon/star.png')}}" style="width:24px;height:24px;" />
+<img src="{{url_for('static', filename='icon/star.png')}}" style="width:24px;height:24px;" />
+<img src="{{url_for('static', filename='icon/star.png')}}" style="width:24px;height:24px;" />
+{% endblock %}
+{% block element %}
+<img src="{{url_for('static', filename='icon/geo.svg')}}" alt="Geo" style="width:32px;height:32px;"/>
+{% endblock %}
+{% block region %}
+Mondstadt
+{% endblock %}
+{% block role %}
+Off-Field DPS
+{% endblock %}
+{% block gender %}
+
+{% endblock %}
+{% block bday %}
+September 13
+{% endblock %}
+{% block description %}
+<h2><a id="geo">Description</a><hr id="hrgeo"></h2>
+<a style="color:white">
+    A genius known as the Kreideprinz, he is the Chief Alchemist and Captain of the
+    Investigation Team of the Knights of Favonius.
+</a>
+{% endblock %}
+
+{% block talents %}
+<br>
+<br>
+<h2><a id="geo">Talents</a><hr id="hrgeo"></h2>
+<img src="{{url_for('static', filename='img/Arataki Itto/attack.webp')}}" style="width:64px;height:64px; float: left; margin-right: 10px; margin-bottom: 20px;"  />
+
+<div style="position: relative; top: 10px; width: 40%;">
+
+<h3 id="geo" style="margin: 0px; position: relative; text-align: center;">
+    Favonius Bladework - Weiss
+</h3>
+    <h5 style="color:white; margin: 0px; text-align: center; position: relative;">
+        Normal Attack
+    </h5>
+
+</div>
+<div style="color:white;">
+    <br>
+    <br>
+    <br>
+<h4 id="geo" style="margin: 0px;">
+        Normal Attack
+    </h4>
+Perform up to 5 rapid strikes.
+
+    <br>
+    <div class="dropdown">
+  <button onclick="myFunction(2)" class="dropbtn">Scaling▼</button>
+  <div id="myDropdown2" class="dropdown-content">
+  <table class="wikitable" border="10" bordercolor="#4f5a6b" style="text-align:center;width:100%; background: #202226;"><tbody><tr><th></th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th><th>11</th></tr><tr><th>1-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>2-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>3-Hit DMG (%)</th><td>47.45</td><td>51.32</td><td>55.18</td><td>60.7</td><td>64.56</td><td>68.97</td><td>75.04</td><td>81.11</td><td>87.18</td><td>93.81</td><td>101.39</td></tr><tr><th>4-Hit DMG (%)</th><td>49.75</td><td>53.8</td><td>57.85</td><td>63.63</td><td>67.68</td><td>72.31</td><td>78.68</td><td>85.04</td><td>91.4</td><td>98.34</td><td>106.3</td></tr><tr><th>5-Hit DMG (%)</th><td>62.07</td><td>67.13</td><td>72.18</td><td>79.4</td><td>84.45</td><td>90.22</td><td>98.16</td><td>106.1</td><td>114.04</td><td>122.7</td><td>132.63</td></tr></tbody></table>
+  </div>
+</div>
+
+
+<br>
+    <br>
+<h4 id="geo" style="margin: 0px;">
+        Charged Attack
+    </h4>
+Consumes a certain amount of Stamina to unleash 2 rapid sword strikes.
+
+    <br>
+    <div class="dropdown">
+  <button onclick="myFunction(1)" class="dropbtn">Scaling▼</button>
+  <div id="myDropdown1" class="dropdown-content">
+  <table class="wikitable" border="10" bordercolor="#4f5a6b" style="text-align:center;width:100%; background: #202226;"><tbody><tr><th colspan="12">Charged Attack</th></tr><tr><th>Charged Attack DMG (%)</th><td>47.3<br />+<br />60.2</td><td>51.15<br />+<br />65.1</td><td>55<br />+<br />70</td><td>60.5<br />+<br />77</td><td>64.35<br />+<br />81.9</td><td>68.75<br />+<br />87.5</td><td>74.8<br />+<br />95.2</td><td>80.85<br />+<br />102.9</td><td>86.9<br />+<br />110.6</td><td>93.5<br />+<br />119</td><td>101.06<br />+<br />128.63</td></tr><tr><th>Charged Attack Stamina Cost</th><td colspan="11">20</td></tr></tbody></table>
+  </div>
+</div>
+
+<br>
+    <br>
+<h4 id="geo" style="margin: 0px;">
+        Plunging Attack
+    </h4>
+Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.
+
+<br>
+        <div class="dropdown">
+    <button onclick="myFunction(3)" class="dropbtn">Scaling▼</button>
+    <div id="myDropdown3" class="dropdown-content">
+    <table class="wikitable" border="10" bordercolor="#4f5a6b" style="text-align:center;width:100%; background: #202226;"><tbody><tr><th colspan="12">Plunging Attack</th></tr><tr><th>Plunge DMG (%)</th><td>63.93</td><td>69.14</td><td>74.34</td><td>81.77</td><td>86.98</td><td>92.92</td><td>101.1</td><td>109.28</td><td>117.46</td><td>126.38</td><td>135.3</td></tr><tr><th>Low Plunge DMG (%)</th><td>127.84</td><td>138.24</td><td>148.65</td><td>163.51</td><td>173.92</td><td>185.81</td><td>202.16</td><td>218.51</td><td>234.86</td><td>252.7</td><td>270.54</td></tr><tr><th>High Plunge DMG (%)</th><td>159.68</td><td>172.67</td><td>185.67</td><td>204.24</td><td>217.23</td><td>232.09</td><td>252.51</td><td>272.93</td><td>293.36</td><td>315.64</td><td>337.92</td></tr></tbody></table>
+    </div>
+    </div>
+</div>
+
+<br>
+<br><hr id="hrgeo"><br>
+<img src="{{url_for('static', filename='img/Arataki Itto/skill.webp')}}" style="width:64px;height:64px; float: left; margin-right: 10px; margin-bottom: 20px;"  />
+
+<div style="position: relative; top: 10px; width: 40%;">
+
+<h3 id="geo" style="margin: 0px; position: relative; text-align: center;">
+    Abiogenesis: Solar Isotoma
+</h3>
+    <h5 style="color:white; margin: 0px; text-align: center; position: relative;">
+        Elemental Skill
+    </h5>
+
+</div>
+<div style="color:white;">
+    <br>
+    <br>
+    <br>
+Arataki Itto creates a Solar Isotoma using alchemy, which deals AoE Geo DMG on appearance.
+<br>
+    <br>
+<b>Solar Isotoma</b>
+    <br>
+has the following properties:
+    <br>
+<ul>When opponents within the Solar Isotoma field take DMG, the Solar Isotoma will generate Transient Blossoms which deal AoE Geo DMG. DMG dealt scales off Arataki Itto's DEF.</ul>
+<ul>Transient Blossoms can only be generated once every 2s.</ul>
+<ul>When a character is located at the locus of the Solar Isotoma, the Solar Isotoma will accumulate Geo power to form a crystallized platform that lifts the character up to a certain height. Only one crystallized platform can exist at a time.</ul>
+    <ul>Solar Isotoma is considered a Geo construct. Only one Solar Isotoma created by Arataki Itto himself can exist at a time.</ul>
+<br>
+    Hold to designate the location of the skill.
+
+    <br>
+    <div class="dropdown">
+  <button onclick="myFunction(2)" class="dropbtn">Scaling▼</button>
+  <div id="myDropdown2" class="dropdown-content">
+  <table class="wikitable" border="10" bordercolor="#4f5a6b" style="text-align:center;width:100%; background: #202226;"><tbody><tr><th></th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th><th>11</th></tr><tr><th>1-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>2-Hit DMG (%)</th><td>36.74</td><td>39.73</td><td>42.72</td><td>46.99</td><td>49.98</td><td>53.4</td><td>58.1</td><td>62.8</td><td>67.5</td><td>72.62</td><td>78.5</td></tr><tr><th>3-Hit DMG (%)</th><td>47.45</td><td>51.32</td><td>55.18</td><td>60.7</td><td>64.56</td><td>68.97</td><td>75.04</td><td>81.11</td><td>87.18</td><td>93.81</td><td>101.39</td></tr><tr><th>4-Hit DMG (%)</th><td>49.75</td><td>53.8</td><td>57.85</td><td>63.63</td><td>67.68</td><td>72.31</td><td>78.68</td><td>85.04</td><td>91.4</td><td>98.34</td><td>106.3</td></tr><tr><th>5-Hit DMG (%)</th><td>62.07</td><td>67.13</td><td>72.18</td><td>79.4</td><td>84.45</td><td>90.22</td><td>98.16</td><td>106.1</td><td>114.04</td><td>122.7</td><td>132.63</td></tr></tbody></table>
+  </div>
+</div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+{% endblock %}
+
+{% block portrait %}
+<img src="{{url_for('static', filename='img/Arataki Itto/portrait.webp')}}" style="width:85%;height:85%;"/>
 {% endblock %}
